# 2026version_HuBMAP_Hacking_the_Human_Vasculature

./: .gitignore  README.md  hubmap-2023-release.ipynb  hubmap_cascade_swap_infer.ipynb  hubmap_dual_stream_infer.ipynb  package_for_kaggle.sh  pyproject.toml  train.py  train_medsam2.py
docs/: cascade_swap_workflow.md  dual_stream_plan.md
kaggle-hubmap-hacking-the-human-vasculature/: kaggle.py
kaggle-hubmap-hacking-the-human-vasculature/.dev_scripts/: hubmap-2023-release.ipynb
kaggle-hubmap-hacking-the-human-vasculature/configs/: m0c.py  m0ci.py
kaggle-hubmap-hacking-the-human-vasculature/tools/: dump_m0c_ckpt.py
kaggle_weights/: dataset-metadata.json
kaggle_weights/configs_patched/: m0i.py  r0i.py  s0i.py  sb0i.py  y0i.py
mmdet_v3_solution/: README.md  build_internimage_env.ipynb  hubmap_fusion_full_infer.ipynb  hubmap_fusion_infer.ipynb  hubmap_internimage_infer copy.ipynb  hubmap_internimage_infer.ipynb  kaggle_infer.py  package_for_kaggle.sh  run_all.sh  setup_env.sh  train.py
mmdet_v3_solution/configs/: cascade_mask_rcnn_internimage_t_fpn.py  stage1_dataset2_pretrain.py
mmdet_v3_solution/tools/: prepare_coco.py
mmdet_v3_solution/weights_to_upload_v3/: README.md  dataset-metadata.json
report/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib  settings.tex
scripts/: install_mm.sh
ultra_wheels/: dataset-metadata.json
wandb/: latest-run
weights_to_upload/: README.md  dataset-metadata.json
yolo26_solution/: README.md  hubmap_yolo26_infer.ipynb  package_for_kaggle.sh  prepare_data.py  run_all.sh  setup_env.sh  train_yolo.py
(+109 files in other folders)
