[project]
name = "2026version-hubmap-hacking-the-human-vasculature"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "einops>=0.8.2",
    "kaggle>=2.1.2",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10",
    "pycocotools>=2.0.7",
    "shapely>=2.0",
    # MedSAM-2 (vendored at third_party/MedSAM2) runtime deps
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "simpleitk>=2.4.0",
    # LoRA fine-tuning
    "peft>=0.12",
    "safetensors>=0.4",
    "kagglehub>=1.0.1",
]

[project.optional-dependencies]
# mmdet training stack (used by kaggle-hubmap-hacking-the-human-vasculature/
# configs/m0c.py and train.py). Pure-python pieces live here; mmcv/mmdet/
# mmpretrain need CUDA-aware install via openmim — see scripts/install_mm.sh.
# Kaggle inference still uses pinned mmdet 3.1 / mmcv 2.0 via offline wheels
# in the notebook, separate from this env.
training = [
    "openmim>=0.3.9",
    "mmengine>=0.10.4",
    "ensemble-boxes>=1.0.9",
]
